--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,12 @@ services:
       - /app/node_modules
     command: npx ts-node index.ts
     depends_on:
-      - frontend
+      supabase-db:
+        condition: service_healthy
+    environment:
+      # Ensure your server binds to 0.0.0.0
+      HOST: 0.0.0.0
+      PORT: 3001
 
   frontend:
     build:
@@ -26,4 +31,100 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
-    command: npm run dev
+    command: npm run dev -- --host 0.0.0.0 --port 5174
+    depends_on:
+      supabase-db:
+        condition: service_healthy
+
+  supabase-db:
+    image: supabase/postgres:15.1.0.155
+    container_name: supabase-db
+    restart: always
+    ports:
+      - '5432:5432'
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    volumes:
+      - supabase-data:/var/lib/postgresql/data
+    healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U postgres -d postgres -h localhost"]
+        interval: 3s
+        timeout: 3s
+        retries: 30
+        start_period: 5s
+
+  supabase-rest:
+    image: postgrest/postgrest:latest
+    container_name: supabase-rest
+    restart: always
+    ports:
+      - '3000:3000'
+    depends_on:
+      - supabase-db
+    environment:
+      PGRST_DB_URI: postgres://postgres:postgres@supabase-db:5432/postgres
+      PGRST_DB_ANON_ROLE: anon
+      PGRST_JWT_SECRET: ${JWT_SECRET_STRING}
+      PGRST_DB_SCHEMAS: public,auth
+      PGRST_SERVER_PORT: 3000
+      PGRST_OPENAPI_SERVER_PROXY_URI: http://localhost:3000
+      PGRST_OPENAPI_MODE: follow-privileges
+      PGRST_CORS_ALLOWED_ORIGINS: http://localhost:5174
+      PGRST_CORS_MAX_AGE: 86400
+
+  supabase-auth:
+    image: supabase/gotrue:v2.178.0
+    container_name: supabase-auth
+    restart: always
+    ports:
+      - '9999:9999'
+    depends_on:
+      supabase-db:
+        condition: service_healthy
+    environment:
+      GOTRUE_JWT_SECRET: ${JWT_SECRET_STRING}
+      GOTRUE_DB_DRIVER: postgres
+      GOTRUE_DB_DATABASE_URL: postgres://postgres:postgres@supabase-db:5432/postgres
+      GOTRUE_API_HOST: 0.0.0.0
+      GOTRUE_API_PORT: 9999
+      API_EXTERNAL_URL: http://localhost:9999
+      GOTRUE_DISABLE_SIGNUP: "false"
+      GOTRUE_JWT_DEFAULT_GROUP_NAME: authenticated
+      GOTRUE_SITE_URL: http://localhost:5174
+
+  supabase-init:
+    image: postgres:15
+    container_name: supabase-init
+    depends_on:
+      - supabase-db
+    volumes:
+      - ./supabase-init:/docker-entrypoint-initdb.d
+    entrypoint: >
+      bash -c "
+        echo 'Waiting for DB...';
+        until pg_isready -h supabase-db -p 5432; do sleep 1; done;
+        echo 'Running schema.sql...';
+        psql -h supabase-db -U postgres -d postgres -f /docker-entrypoint-initdb.d/schema.sql;
+        if [ -f /docker-entrypoint-initdb.d/data.sql ]; then
+          echo 'Running data.sql...';
+          psql -h supabase-db -U postgres -d postgres -f /docker-entrypoint-initdb.d/data.sql;
+        fi
+        echo 'Supabase init complete.';
+      "
+    environment:
+      PGPASSWORD: postgres
+
+  proxy:
+    image: nginx:1.25-alpine
+    container_name: supabase-proxy
+    depends_on:
+      - supabase-rest
+      - supabase-auth
+    ports:
+      - "8000:80"
+    volumes:
+      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf:ro
+
+volumes:
+  supabase-data:
