--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -1,18 +1,102 @@
-events {}
+# events {}
+# http {
+#   server {
+#     listen 80;
+
+#     location /rest/v1/ {
+#       proxy_set_header Authorization $http_authorization;
+#       proxy_set_header Host $host;
+#       proxy_pass http://supabase-rest:3000/;
+#     }
+
+#     location /auth/v1/ {
+#       proxy_set_header Authorization $http_authorization;
+#       proxy_set_header Host $host;
+#       proxy_pass http://supabase-auth:9999/;
+#     }
+#   }
+# }
+
+worker_processes auto;
+events { worker_connections 1024; }
+
 http {
+  # sinnvolle Defaults
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  keepalive_timeout 65;
+  types_hash_max_size 4096;
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
+
+  # Gzip (optional)
+  gzip on;
+  gzip_types text/plain text/css application/javascript application/json image/svg+xml;
+
+  # Upstreams (Docker-DNS: Dienstnamen als Host)
+  upstream frontend_upstream { server vite-frontend:80; }
+  upstream backend_upstream  { server openai-backend:3001; }
+  upstream rest_upstream     { server supabase-rest:3000; }
+  upstream auth_upstream     { server supabase-auth:9999; }
+
   server {
     listen 80;
+    server_name deine-domain.tld;
+    return 301 https://$host$request_uri;
+  }
 
-    location /rest/v1/ {
-      proxy_set_header Authorization $http_authorization;
+  server {
+    listen 443 ssl http2;
+    server_name deine-domain.tld;
+
+    ssl_certificate     /etc/ssl/app/cert.pem;   # besser: fullchain.pem
+    ssl_certificate_key /etc/ssl/app/key.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+
+    # ----- Static Frontend -----
+    location / {
+      proxy_pass http://frontend_upstream;
       proxy_set_header Host $host;
-      proxy_pass http://supabase-rest:3000/;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /auth/v1/ {
-      proxy_set_header Authorization $http_authorization;
+    # ----- Backend API -----
+    location /api/ {
+      proxy_pass http://backend_upstream/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
       proxy_set_header Host $host;
-      proxy_pass http://supabase-auth:9999/;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    # ----- Supabase REST -----
+    location /rest/ {
+      proxy_pass http://rest_upstream/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      add_header Access-Control-Allow-Origin https://deine-domain.tld always;
+      add_header Access-Control-Allow-Credentials true always;
+      add_header Access-Control-Allow-Headers "*" always;
+      add_header Access-Control-Allow-Methods "GET,POST,PUT,PATCH,DELETE,OPTIONS" always;
+
+      if ($request_method = OPTIONS) {
+        return 204;
+      }
+    }
+
+    # ----- Supabase Auth -----
+    location /auth/ {
+      proxy_pass http://auth_upstream/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Optional: HSTS aktivieren, wenn alles sauber über HTTPS läuft
+    # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
   }
 }
