--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "server": "cd server && node --experimental-modules server.ts",
     "build:dev": "vite build --mode development",
     "proxy": "http://localhost:5000",
-    "typecheck": "tsc --noEmit"     // <— optional separat
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@azure/identity": "^3.2.3",
