--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "file-saver": "^2.0.5",
     "mongoose": "^7.6.4",
     "openai": "^4.89.0",
+    "pdf-parse": "^2.4.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
