--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "openai": "^4.22.1",
-    "pdf-parse": "^2.4.5"
+    "pdf-parse": "^2.4.5",
+    "html-to-text": "9.0.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
